--- a/src/universidad_equipo85/Vistas/AlumnosIF.form
+++ b/src/universidad_equipo85/Vistas/AlumnosIF.form
@@ -277,6 +277,10 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtId">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+            <Property name="enabled" type="boolean" value="false"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
