--- a/src/universidad_equipo85/Vistas/MenuPrincipal.form
+++ b/src/universidad_equipo85/Vistas/MenuPrincipal.form
@@ -112,7 +112,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MenuSalirActionPerformed"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="MenuSalirMouseClicked"/>
           </Events>
         </Menu>
       </SubComponents>
