Nuevos metodos y vistas

--- a/src/universidad_equipo85/Vistas/MenuPrincipal.form
+++ b/src/universidad_equipo85/Vistas/MenuPrincipal.form
@@ -159,7 +159,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="214" max="-2" attributes="0"/>
-                  <Component id="jLabel1" min="-2" pref="315" max="-2" attributes="0"/>
+                  <Component id="jlLogo" min="-2" pref="315" max="-2" attributes="0"/>
                   <EmptySpace pref="263" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -168,14 +168,14 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="170" max="-2" attributes="0"/>
-                  <Component id="jLabel1" min="-2" pref="167" max="-2" attributes="0"/>
+                  <Component id="jlLogo" min="-2" pref="167" max="-2" attributes="0"/>
                   <EmptySpace pref="221" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="jLabel1">
+        <Component class="javax.swing.JLabel" name="jlLogo">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/universidad_equipo85/imagenes/logo-ulp.png"/>
